feat: adiciona uma nova section sobre a trajetória profissional

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <h6>Eterna aprendiz</h6>
     </header>
 
+    <section>
+        <h4>Trajetória profissional</h4>
+        <h5>Onde começou</h5>
+        <p>
+            Não vou tratar aqui do mercado formal, mas sim algo da minha memória e a primeira atividade que eu tive uma visão do que é o trabalho
+            na minha vida. 
+        </p>
+    </section>
+
     
 </body>
 
